Readjusted sizes on mobile, fixed loading gif
Readjusted sizes on mobile, fixed loading gif

--- a/src/App.css
+++ b/src/App.css
@@ -97,16 +97,15 @@ height: 40px;}
 
 
   .PokeSearch img {height: 31%;
-    top: -28px;
-    width: 184px;
+    top: -37.5px;
+    width: 150px;
    }
 
-  .card {min-width: 220px;
-    background-size: 220px 80%;
+  .card {min-width: 180px;
+    background-size: 180px 80%;
     margin-left:  10px;
-    margin-top: 40px;
     margin-right: 10px;
-    min-height: 354px;
+    min-height: 304px;
   background-repeat: no-repeat;}
 
   .header {
@@ -117,10 +116,11 @@ height: 40px;}
 
   .pokeName {white-space: nowrap;
     font-size: 14pt;
+    top: -17px;
     }
 
     .searchBar {
-      width: 50%;
+      width: 52%;
       }
 
     
